--- a/CVRTest/ui.css
+++ b/CVRTest/ui.css
@@ -778,10 +778,25 @@ h1 {
     border: 3px solid #404040;
     padding: 0 0.2em 0 0;
 }
+.action-btn-wide {
+    width: 15em;
+    height: 2em;
+    text-align: center;
+    font-size: 1em;
+    border-radius: 0.25em;
+    border: 3px solid #404040;
+    margin-top: 0.2em;
+    display: flex;
+    justify-content: center;
+}
 
 .action-btn img {
     width: 2.6em;
     height: 2.6em;
+}
+.action-btn-wide img {
+    width: 1.5em;
+    height: 1.5em;
 }
 
 /*World Detail*/
@@ -1618,15 +1633,13 @@ h1 {
     width: 77%;
     height: 16%;
     left: 22%;
-
-    border-radius: 0.25em;
-    border: 3px solid #404040;
-
     display: flex;
 }
 
 .user-toolbar .toolbar-btn {
     width: 11.111111%;
+    border-radius: 0.25em;
+    border: 0px solid #404040;
 }
 
 .activityDataAvailable,
@@ -2874,10 +2887,6 @@ h1 {
     width: 77%;
     height: 16%;
     left: 22%;
-
-    border-radius: 0.25em;
-    border: 3px solid #404040;
-
     display: flex;
 }
 
@@ -2941,10 +2950,6 @@ h1 {
     width: 77%;
     height: 16%;
     left: 22%;
-
-    border-radius: 0.25em;
-    border: 3px solid #404040;
-
     display: flex;
 }
 
