--- a/CVRTest/ui.css
+++ b/CVRTest/ui.css
@@ -274,8 +274,8 @@ h1 {
 
 .friend .online-state {
     z-index: 0;
-    width: 9em;
-    height: 7em;
+    width: 10em;
+    height: 10em;
     mask-image: url("gfx/HexagonMask.svg");
     mask-size: contain;
     mask-position: center;
@@ -283,6 +283,7 @@ h1 {
     display: flex;
     justify-content: center;
     position: relative;
+    bottom: 10px;
     background: #7c0000;
 }
 
@@ -996,6 +997,10 @@ h1 {
     width: 5em;
     height: 5em;
     margin-right: 0.5em;
+    mask-image: url("gfx/HexagonMask.svg");
+    mask-size: contain;
+    mask-position: center;
+    align-self: center;
 }
 .data-author-profile {
     position: absolute;
@@ -1262,10 +1267,6 @@ h1 {
     width: 13.5em;
     height: 13.5em;
     margin-left: 0.5em;
-    mask-image: url("gfx/HexagonMask.svg");
-    mask-size: contain;
-    mask-position: center;
-    align-self: center;
 }
 
 .content-instance-owner h2 {
@@ -1383,6 +1384,10 @@ h1 {
     height: 4em;
     margin-right: 1em;
     margin-bottom: 0.5em;
+    mask-image: url("gfx/HexagonMask.svg");
+    mask-size: contain;
+    mask-position: center;
+    align-self: center;
 }
 .content-instance-players .instancePlayer .instancePlayerName {
     flex: 1;
@@ -1923,10 +1928,16 @@ h1 {
     overflow: hidden;
 
     box-sizing: border-box;
-    border: 3px solid #404040;
+    border: 0px solid #404040;
 
     background-color: rgba(var(--menu-bg-colour), var(--menu-opacity));
 
+    display: flex;
+    clip-path: polygon(2% 0, 98% 0, 100% 50%, 98% 100%, 2% 100%, 0% 50%);
+}
+
+.toolbar-sep {
+    width: 50px;
     display: flex;
 }
 
@@ -1979,6 +1990,7 @@ h1 {
 
 .time-display {
     margin-top: 0.1em;
+    margin-right: 0.9em;
     font-size: 72px;
 }
 
@@ -2187,6 +2199,10 @@ h1 {
     border-right: 3px solid #404040;
 
     margin-right: 0.6em;
+    mask-image: url("gfx/HexagonMask.svg");
+    mask-size: contain;
+    mask-position: center;
+    align-self: center;
 }
 
 .feed-text-wrapper {
@@ -2393,6 +2409,7 @@ h1 {
     height: 2em;
     width: 2em;
     border: 4px solid #404040;
+    clip-path: polygon(2% 0, 98% 0, 100% 50%, 98% 100%, 2% 100%, 0% 50%);
     margin-bottom: 1em
 }
 .inp_toggle.checked {
